# EDAMI-FrequentPatternDisco

./: CMakeLists.txt  README.md  spademodule.h
src/: CandidateGenerator.cpp  CandidateGenerator.h  EquivalenceClass.h  FrequentPatternEnumeration.cpp  FrequentPatternEnumeration.h  IdList.cpp  IdList.h  Pattern.h  SequenceDatabase.cpp  SequenceDatabase.h  Spade.cpp  Spade.h  Spade.hpp  main.cpp  spade.cpp  spade.hpp
